# mtcnn

./: README.md
ubuntu/: CMakeLists.txt  ImageList.txt
ubuntu/src/: main.cpp  mtcnn.cpp  mtcnn.h
windows/include/: mtcnn.h
windows/src/: main.cpp  mtcnn.cpp  src.vcxproj  src.vcxproj.filters
windows/src/x64/Release/src.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  src.lastbuildstate
